# pr-reviewer

./: .gitignore  INICIO-RAPIDO-COMANDOS.md  README.md  pyproject.toml
config/: GUIA-CONFIGURACION.md  repos.sample.local.yaml  repos.yaml  service.env.example
scripts/: start-local.ps1
service/: __init__.py  app.py  bitbucket.py  config.py  git_ops.py  models.py  queue.py  review_runner.py  state.py  webhooks.py
tests/: conftest.py  test_bitbucket.py  test_config.py  test_e2e_webhook_to_comment.py  test_git_ops.py  test_review_runner.py  test_state.py  test_webhooks.py
tests/fixtures/: bitbucket_pullrequest_updated.json  opencode_output.json  repo_review_config.yml
